adicionando função de deletar clientes

--- a/admin/telas/cadastro_concluido.html
+++ b/admin/telas/cadastro_concluido.html
@@ -71,6 +71,10 @@
 				>
 			</section>
 		</main>
+		<script
+			src="../controller/cadastraCliente-controller.js"
+			type="module"
+		></script>
 	</body>
 </html>
 
