--- a/admin/telas/cadastra_cliente.html
+++ b/admin/telas/cadastra_cliente.html
@@ -112,6 +112,10 @@
 				</form>
 			</section>
 		</main>
+		<script
+			src="../controller/cadastraCliente-controller.js"
+			type="module"
+		></script>
 	</body>
 </html>
 
