--- a/admin/telas/edita_cliente.html
+++ b/admin/telas/edita_cliente.html
@@ -113,6 +113,10 @@
 				</form>
 			</section>
 		</main>
+		<script
+			src="../controller/atualizaCliente-controller.js"
+			type="module"
+		></script>
 	</body>
 </html>
 
